--- a/secret.html
+++ b/secret.html
@@ -11,155 +11,126 @@
             color: #00ffaa !important;
             font-family: 'Share Tech Mono', monospace;
             overflow-x: hidden;
+            margin: 0;
         }
-        /* 背景のノイズ演出 */
-        .bg-overlay {
+        /* 走査線エフェクト */
+        .scanline {
             position: fixed;
             top: 0; left: 0; width: 100%; height: 100%;
-            background: repeating-linear-gradient(0deg, rgba(0,0,0,0.1) 0px, rgba(0,0,0,0.1) 1px, transparent 1px, transparent 2px);
+            background: linear-gradient(rgba(18, 16, 16, 0) 50%, rgba(0, 0, 0, 0.1) 50%);
+            background-size: 100% 4px;
+            z-index: 100;
             pointer-events: none;
-            z-index: 10;
         }
-        .container { position: relative; z-index: 20; }
-
-        /* 警告表示 */
-        .alert-banner {
-            background: #ff0044;
-            color: white;
-            padding: 5px;
-            font-weight: bold;
-            text-align: center;
-            animation: blink 0.8s infinite;
-            margin-bottom: 20px;
-        }
-        @keyframes blink { 0%, 100% { opacity: 1; } 50% { opacity: 0.3; } }
-
-        /* データパネル */
-        .data-panel {
-            border: 2px solid #00ffaa;
-            background: rgba(0, 255, 170, 0.05);
-            padding: 20px;
-            border-radius: 5px;
-            margin-bottom: 20px;
-            box-shadow: 0 0 15px rgba(0, 255, 170, 0.2);
-        }
-        .panel-header {
-            border-bottom: 1px solid #00ffaa;
-            padding-bottom: 10px;
-            margin-bottom: 15px;
-            font-size: 1.2rem;
-            display: flex;
-            justify-content: space-between;
-        }
-
-        /* プログレスバー風演出 */
-        .loading-bar {
-            width: 100%;
-            height: 10px;
-            background: #111;
-            border: 1px solid #00ffaa;
-            margin: 10px 0;
+        .container {
             position: relative;
-            overflow: hidden;
+            z-index: 10;
+            padding: 20px;
+            max-width: 500px;
+            margin: 0 auto;
         }
-        .bar-fill {
-            height: 100%;
-            background: #00ffaa;
-            width: 75%;
-            animation: fill-anim 5s linear infinite;
+        .header-box {
+            border: 1px solid #00ffaa;
+            padding: 15px;
+            margin-bottom: 30px;
+            background: rgba(0, 255, 170, 0.05);
         }
-        @keyframes fill-anim {
-            0% { width: 0%; }
-            50% { width: 100%; }
-            100% { width: 0%; }
+        .system-log {
+            font-size: 0.75rem;
+            line-height: 1.6;
+            margin-bottom: 20px;
+            border-left: 3px solid #00ffaa;
+            padding-left: 15px;
         }
-
-        /* リスト */
-        .secret-list {
-            list-style: none;
-            padding: 0;
-            font-size: 0.85rem;
+        /* ツール解禁ボタン */
+        .tool-link-card {
+            background: rgba(0, 255, 170, 0.1);
+            border: 2px dashed #00ffaa;
+            padding: 30px 20px;
+            text-align: center;
+            border-radius: 20px;
+            margin-bottom: 40px;
         }
-        .secret-list li {
-            padding: 8px 0;
-            border-bottom: 1px solid rgba(0, 255, 170, 0.2);
-        }
-        .secret-list li::before {
-            content: "> ";
-            color: #ff0044;
-        }
-
-        .exit-btn {
+        .access-btn {
             background: #00ffaa;
             color: #000;
             border: none;
-            padding: 15px;
-            width: 100%;
-            font-weight: bold;
+            padding: 15px 30px;
             font-size: 1rem;
+            font-weight: bold;
+            font-family: inherit;
             cursor: pointer;
-            text-transform: uppercase;
+            border-radius: 50px;
+            box-shadow: 0 0 20px rgba(0, 255, 170, 0.4);
+            transition: transform 0.2s;
+        }
+        .access-btn:active { transform: scale(0.95); }
+        
+        .warn-text {
+            color: #ff0044;
+            font-size: 0.7rem;
+            margin-top: 15px;
+            font-weight: bold;
+        }
+        .exit-link {
+            display: block;
+            text-align: center;
+            color: #00ffaa;
+            text-decoration: none;
+            font-size: 0.8rem;
+            margin-top: 50px;
+            opacity: 0.6;
         }
     </style>
 </head>
 <body>
-    <div class="bg-overlay"></div>
+    <div class="scanline"></div>
 
     <main class="container">
-        <div class="alert-banner">CONFIDENTIAL - AUTHORIZED PERSONNEL ONLY</div>
-
-        <div class="data-panel">
-            <div class="panel-header">
-                <span>SYSTEM STATUS</span>
-                <span id="clock">00:00:00</span>
-            </div>
-            <div style="font-size: 0.8rem;">
-                SITE_ID: SHINONOI-026<br>
-                USER: GUEST_EXPLORER<br>
-                ENCRYPTION: AES-256-BIT
-            </div>
-            <div class="loading-bar"><div class="bar-fill"></div></div>
+        <div class="header-box">
+            <h1 style="font-size: 1.2rem; margin: 0; letter-spacing: 3px;">UNAUTHORIZED ACCESS</h1>
+            <p style="font-size: 0.6rem; margin: 5px 0 0; opacity: 0.7;">LOCATION: NAGANO / SECTOR-X</p>
         </div>
 
-        <div class="data-panel">
-            <h3 style="margin-top:0;">INTERNAL LOGS</h3>
-            <ul class="secret-list">
-                <li>2025/03 - サイト構築開始。当初の名称は「篠ノ井オンライン」</li>
-                <li>2025/07 - ルーレットの挙動を物理演算に近い減速に変更</li>
-                <li>2025/11 - 同意システムの導入により法的要件をクリア</li>
-                <li>2025/12 - 隠しページ「Sector-X」を実装</li>
-            </ul>
+        <div class="system-log">
+            > STATUS: SUCCESS<br>
+            > USER: GUEST_EXPLORER<br>
+            > 隠し要素の発見を確認しました。<br>
+            > 下記の「未公開ツール」へのアクセスを一時的に許可します。
         </div>
 
-        <div class="data-panel">
-            <h3 style="margin-top:0;">PROJECT: SECRETS</h3>
-            <p style="font-size: 0.75rem; color: #aaa;">
-                このサイトの「ToolBox」ロゴを100回クリックしても何も起きませんが、
-                特定の時間にだけ表示されるツールが存在するという噂があります。
+        <div class="tool-link-card">
+            <h2 style="font-size: 1.1rem; margin-bottom: 10px;">SYSTEM_CALCULATOR_V1</h2>
+            <p style="font-size: 0.75rem; margin-bottom: 20px; opacity: 0.8;">
+                すべての演算を物理ボタンで処理する<br>
+                プロトタイプ版の計算機ツールです。
             </p>
-            <div style="font-size: 0.75rem; background: rgba(255,0,0,0.1); padding: 10px; border: 1px solid #ff0044; color: #ff0044;">
-                WARNING: このページを発見したことは、他言無用でお願いいたします。
-            </div>
+            <button class="access-btn" onclick="openDen()">ACCESS: den.html</button>
+            <p class="warn-text">※一度のみ有効な認証キーを発行します</p>
         </div>
 
-        <button class="exit-btn" onclick="location.href='index.html'">ホームへ脱出する</button>
+        <div class="system-log" style="border-color: #38bdf8; opacity: 0.8;">
+            > ARCHIVE_01: 篠ノ井乗務区の設立は2025年。<br>
+            > ARCHIVE_02: 本サイトはLocalStorageを利用したデータ保存を行っています。<br>
+            > ARCHIVE_03: このページの存在はログに残されません。
+        </div>
+
+        <a href="index.html" class="exit-link">[ EXIT_SYSTEM ]</a>
     </main>
 
     <script>
-        // 時計の更新
-        function updateClock() {
-            const now = new Date();
-            const time = now.getHours().toString().padStart(2, '0') + ":" +
-                         now.getMinutes().toString().padStart(2, '0') + ":" +
-                         now.getSeconds().toString().padStart(2, '0');
-            document.getElementById('clock').innerText = time;
+        function openDen() {
+            // 30秒間だけ有効な「通行証」を発行してブラウザに保存
+            const expiryTime = new Date().getTime() + 30000;
+            localStorage.setItem('den_access_token', expiryTime);
+            
+            // 電卓ページ（den.html）へ移動
+            location.href = 'den.html';
         }
-        setInterval(updateClock, 1000);
-        updateClock();
 
-        // コンソールにさらに隠しメッセージ
-        console.log("%cSHINONOI SYSTEM ADMIN", "background: #00ffaa; color: #000; padding: 5px; font-weight: bold;");
-        console.log("君、なかなかやるじゃないか。このページのソースコードに何かを見つけたかな？");
+        // 演出：コンソールログ
+        console.log("%cWARNING: ACCESS DETECTED", "color: #ff0044; font-size: 1.5rem; font-weight: bold;");
+        console.log("未公開ツールセクターへの侵入が記録されました。");
     </script>
 </body>
 </html>
