--- a/den.html
+++ b/den.html
@@ -38,7 +38,6 @@
             max-width: 360px;
             position: relative;
         }
-        /* ディスプレイ：式を表示する小窓を追加 */
         .display-area {
             background: #000;
             border: 1px solid #333;
@@ -46,13 +45,15 @@
             padding: 10px;
             border-radius: 5px;
             text-align: right;
+            position: relative;
         }
         #formula {
             height: 15px;
-            font-size: 0.7rem;
+            font-size: 0.75rem;
             color: #008855;
             margin-bottom: 5px;
             overflow: hidden;
+            letter-spacing: 1px;
         }
         #display {
             font-size: 1.8rem;
@@ -60,6 +61,17 @@
             line-height: 35px;
             text-shadow: 0 0 10px #00ffaa;
             overflow: hidden;
+        }
+        /* HELPボタン */
+        .btn-help {
+            position: absolute;
+            top: 5px;
+            left: 5px;
+            font-size: 0.6rem;
+            border: 1px solid #00ffaa;
+            padding: 2px 5px;
+            cursor: pointer;
+            border-radius: 3px;
         }
         .grid {
             display: grid;
@@ -74,6 +86,7 @@
             font-size: 1rem;
             cursor: pointer;
             border-radius: 6px;
+            font-family: inherit;
         }
         button:active { background: #00ffaa; color: #000; }
         .btn-func { color: #38bdf8; border-color: #38bdf8; font-size: 0.8rem; }
@@ -86,16 +99,14 @@
             position: absolute;
             top: 50%; left: 50%;
             transform: translate(-50%, -50%);
-            width: 80%;
-            background: rgba(0, 20, 10, 0.95);
+            width: 85%;
+            background: rgba(0, 20, 10, 0.98);
             border: 2px solid #00ffaa;
             padding: 20px;
             border-radius: 15px;
             z-index: 100;
             display: none;
-            text-align: left;
-            font-size: 0.8rem;
-            line-height: 1.6;
+            box-shadow: 0 0 50px rgba(0,0,0,1);
         }
     </style>
 </head>
@@ -103,19 +114,26 @@
 
     <div class="calc-frame">
         <div id="guide-modal">
-            <h3 style="margin-top:0; color:#00ffaa; border-bottom:1px solid #00ffaa;">SYSTEM GUIDE</h3>
-            ・全ての操作はボタンで行います<br>
-            ・上部に現在の計算式が表示されます<br>
-            ・sin/cos/tanは角度(deg)で計算<br>
-            ・πボタンで円周率を即時入力<br>
-            <button onclick="closeGuide()" style="margin-top:15px; width:100%; border-color:#00ffaa;">UNDERSTOOD</button>
+            <h3 style="margin-top:0; color:#00ffaa; border-bottom:1px solid #00ffaa; font-size:1rem;">SYSTEM GUIDE</h3>
+            <p style="font-size:0.75rem; line-height:1.6; color:#00ffaa;">
+                ・全ボタン式入力システム<br>
+                ・上部に現在進行中の計算式を表示<br>
+                ・sin/cos/tanは角度(deg)で計算<br>
+                ・πボタンで円周率を直接代入<br>
+                ・x²は現在の数値を2乗します
+            </p>
+            <button onclick="toggleGuide()" style="margin-top:10px; width:100%; border-color:#00ffaa; color:#00ffaa;">CLOSE</button>
         </div>
 
-        <div style="font-size:0.6rem; margin-bottom:10px; opacity:0.7;">PRO_TOOLS: SCIENTIFIC_CALC_V3</div>
+        <div style="display:flex; justify-content:space-between; font-size:0.6rem; margin-bottom:5px; opacity:0.7;">
+            <span>SCI_CALC_V3.01</span>
+            <span>SHINORAIL_INTERNAL</span>
+        </div>
         
         <div class="display-area">
+            <div class="btn-help" onclick="toggleGuide()">? HELP</div>
             <div id="formula"></div>
-            <div id="display">BOOTING...</div>
+            <div id="display">CONNECTING...</div>
         </div>
         
         <div class="grid">
@@ -143,29 +161,32 @@
             <button onclick="n('.')">.</button>
             <button class="btn-eq" onclick="e()">=</button>
         </div>
-        <button onclick="location.href='secret.html'" style="margin-top:15px; width:100%; font-size:0.7rem; border:none; background:transparent; color:#555; cursor:pointer;">CLOSE_SESSION</button>
+        <button onclick="location.href='secret.html'" style="margin-top:15px; width:100%; font-size:0.7rem; border:none; background:transparent; color:#444; cursor:pointer;">DISCONNECT</button>
     </div>
 
     <script>
         let s = "0", val = null, op = null, w = false;
         const disp = document.getElementById('display');
         const form = document.getElementById('formula');
+        const modal = document.getElementById('guide-modal');
 
         window.onload = () => {
-            const startupLines = ["LINKING...", "STABILIZING...", "READY", "0"];
+            const logs = ["BOOTING...", "AUTH_CHECK", "READY", "0"];
             let i = 0;
-            const interval = setInterval(() => {
-                disp.innerText = startupLines[i];
+            const timer = setInterval(() => {
+                disp.innerText = logs[i];
                 i++;
-                if (i >= startupLines.length) {
-                    clearInterval(interval);
+                if (i >= logs.length) {
+                    clearInterval(timer);
                     s = "0"; disp.innerText = s;
-                    document.getElementById('guide-modal').style.display = 'block';
+                    modal.style.display = 'block'; // 初回のみ自動表示
                 }
-            }, 400);
+            }, 300);
         };
 
-        function closeGuide() { document.getElementById('guide-modal').style.display = 'none'; }
+        function toggleGuide() {
+            modal.style.display = (modal.style.display === 'block') ? 'none' : 'block';
+        }
 
         function n(v) {
             if (w) { s = v; w = false; }
@@ -174,11 +195,11 @@
         }
 
         function o(v) {
-            if (op !== null) e();
+            if (op !== null && !w) e();
             val = parseFloat(s);
             op = v;
             w = true;
-            form.innerText = val + " " + v; // 式を表示
+            form.innerText = val + " " + v; // 数字と演算子を表示
         }
 
         function c() {
@@ -187,18 +208,18 @@
         }
 
         function f(type) {
-            let current = parseFloat(s);
+            let cur = parseFloat(s);
             let res = 0;
-            let label = "";
+            let lab = "";
             switch(type) {
-                case 'sin': res = Math.sin(current * Math.PI / 180); label = `sin(${current})`; break;
-                case 'cos': res = Math.cos(current * Math.PI / 180); label = `cos(${current})`; break;
-                case 'tan': res = Math.tan(current * Math.PI / 180); label = `tan(${current})`; break;
-                case 'sqrt': res = Math.sqrt(current); label = `√(${current})`; break;
-                case 'pow': res = Math.pow(current, 2); label = `${current}²`; break;
-                case 'pi': res = Math.PI; s = res.toString(); disp.innerText = "3.141592..."; return;
+                case 'sin': res = Math.sin(cur * Math.PI / 180); lab = `sin(${cur})`; break;
+                case 'cos': res = Math.cos(cur * Math.PI / 180); lab = `cos(${cur})`; break;
+                case 'tan': res = Math.tan(cur * Math.PI / 180); lab = `tan(${cur})`; break;
+                case 'sqrt': res = Math.sqrt(cur); lab = `√(${cur})`; break;
+                case 'pow': res = Math.pow(cur, 2); lab = `${cur}²`; break;
+                case 'pi': s = Math.PI.toString(); disp.innerText = "3.141592..."; return;
             }
-            form.innerText = label;
+            form.innerText = lab;
             s = String(parseFloat(res.toFixed(8)));
             disp.innerText = s;
             w = true;
@@ -207,17 +228,11 @@
         function e() {
             if (op === null || w) return;
             let v = parseFloat(s), r = 0;
-            form.innerText = val + " " + op + " " + v + " ="; // 式を完結させて表示
-            switch(op) {
-                case '+': r = val + v; break;
-                case '-': r = val - v; break;
-                case '*': r = val * v; break;
-                case '/': r = val / v; break;
-            }
+            form.innerText = val + " " + op + " " + v + " =";
+            if(op==='+') r=val+v; else if(op==='-') r=val-v; else if(op==='*') r=val*v; else if(op==='/') r=val/v;
             s = String(parseFloat(r.toFixed(8)));
             disp.innerText = s;
-            op = null;
-            w = true;
+            op = null; w = true;
         }
     </script>
 </body>
