--- a/memo.html
+++ b/memo.html
@@ -3,22 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>共有メモ | 篠ノ井乗務区</title>
+    <title>マイメモ帳 | 篠ノ井乗務区</title>
     <style>
-        /* --- 標準的な白と緑のスタイル --- */
         body {
-            margin: 0;
-            padding: 0;
-            background-color: #f4f7f6; /* 薄いグレーがかった白 */
+            margin: 0; padding: 0;
+            background-color: #f4f7f6;
             color: #333;
-            font-family: "Helvetica Neue", Arial, "Hiragino Kaku Gothic ProN", "Hiragino Sans", Meiryo, sans-serif;
+            font-family: sans-serif;
             height: 100vh;
             display: flex;
             flex-direction: column;
         }
-
         .header {
-            background-color: #28a745; /* 清潔感のある緑 */
+            background-color: #28a745;
             color: white;
             padding: 15px 20px;
             display: flex;
@@ -26,112 +23,47 @@
             align-items: center;
             box-shadow: 0 2px 4px rgba(0,0,0,0.1);
         }
-
-        .header h1 {
-            margin: 0;
-            font-size: 1.1rem;
-        }
-
+        .header h1 { margin: 0; font-size: 1.1rem; }
         .container {
-            flex: 1;
-            padding: 15px;
-            display: flex;
-            flex-direction: column;
-            max-width: 800px;
-            margin: 0 auto;
-            width: 100%;
+            flex: 1; padding: 15px; display: flex;
+            flex-direction: column; max-width: 800px;
+            margin: 0 auto; width: 100%;
         }
-
         .status-bar {
-            font-size: 0.8rem;
-            margin-bottom: 10px;
-            color: #666;
-            display: flex;
-            justify-content: space-between;
+            font-size: 0.8rem; margin-bottom: 10px;
+            color: #666; display: flex; justify-content: space-between;
         }
-
         textarea {
-            flex: 1;
-            background-color: #fff;
-            border: 1px solid #ddd;
-            border-radius: 8px;
-            padding: 15px;
-            font-size: 16px;
-            line-height: 1.6;
-            color: #333;
-            outline: none;
+            flex: 1; background-color: #fff; border: 1px solid #ddd;
+            border-radius: 8px; padding: 15px; font-size: 16px;
+            line-height: 1.6; color: #333; outline: none;
             box-shadow: inset 0 1px 3px rgba(0,0,0,0.05);
-            transition: border-color 0.2s;
         }
-
-        textarea:focus {
-            border-color: #28a745;
-        }
-
-        /* 未ログイン時の制限スタイル */
-        .readonly-mode {
-            background-color: #e9ecef !important;
-            color: #6c757d !important;
-            cursor: not-allowed;
-        }
-
+        textarea:focus { border-color: #28a745; }
+        .readonly-mode { background-color: #e9ecef !important; color: #6c757d !important; cursor: not-allowed; }
         .alert-banner {
-            background-color: #fff3cd;
-            color: #856404;
-            padding: 10px;
-            border-radius: 8px;
-            font-size: 0.85rem;
-            margin-bottom: 15px;
-            border: 1px solid #ffeeba;
-            text-align: center;
-            display: none;
+            background-color: #fff3cd; color: #856404; padding: 10px;
+            border-radius: 8px; font-size: 0.85rem; margin-bottom: 15px;
+            border: 1px solid #ffeeba; text-align: center; display: none;
         }
-
         .footer {
-            padding: 15px;
-            background-color: #fff;
-            border-top: 1px solid #ddd;
-            display: flex;
-            gap: 10px;
+            padding: 15px; background-color: #fff; border-top: 1px solid #ddd;
+            display: flex; gap: 10px;
         }
-
         .btn {
-            flex: 1;
-            padding: 12px;
-            border-radius: 6px;
-            font-size: 0.95rem;
-            font-weight: bold;
-            cursor: pointer;
-            text-align: center;
-            border: none;
-            transition: opacity 0.2s;
+            flex: 1; padding: 12px; border-radius: 6px; font-size: 0.95rem;
+            font-weight: bold; cursor: pointer; text-align: center; border: none;
         }
-
-        .btn-secondary {
-            background-color: #6c757d;
-            color: white;
-        }
-
-        .btn-primary {
-            background-color: #28a745;
-            color: white;
-        }
-
-        .btn:disabled {
-            background-color: #ccc;
-            cursor: not-allowed;
-        }
-
-        .btn:active {
-            opacity: 0.8;
-        }
+        .btn-secondary { background-color: #6c757d; color: white; }
+        .btn-primary { background-color: #28a745; color: white; }
+        .btn:disabled { background-color: #ccc; cursor: not-allowed; }
     </style>
 </head>
 <body>
 
     <div class="header">
-        <h1>共有メモ</h1>
-        <div id="sync-stat" style="font-size: 0.7rem; opacity: 0.9;">接続中...</div>
+        <h1>マイメモ帳</h1>
+        <div id="sync-stat" style="font-size: 0.7rem; opacity: 0.9;">同期中...</div>
     </div>
 
     <div class="container">
@@ -140,11 +72,11 @@
         </div>
 
         <div class="status-bar">
-            <span id="role-label">ゲスト閲覧モード</span>
+            <span id="role-label">ゲストモード</span>
             <span id="char-count">0 文字</span>
         </div>
 
-        <textarea id="memo-area" placeholder="メモを読み込み中..."></textarea>
+        <textarea id="memo-area" placeholder="読み込み中..."></textarea>
     </div>
 
     <div class="footer">
@@ -156,6 +88,13 @@
         const API_URL = "https://script.google.com/macros/s/AKfycbxkgbAIzQLw2N__Vwt8NjNWJA9srFxb5wbPLNDW5Tg47p1VehTM8t2RQtsRWLha3K2P/exec";
         const AUTH_KEY = 'shinorail_consent_v1';
         
+        // ブラウザごとに固有のIDを取得または生成
+        let userUID = localStorage.getItem('shinorail_uid');
+        if (!userUID) {
+            userUID = 'ID_' + Math.random().toString(36).substring(2, 10).toUpperCase();
+            localStorage.setItem('shinorail_uid', userUID);
+        }
+
         const memoArea = document.getElementById('memo-area');
         const syncStat = document.getElementById('sync-stat');
         const roleLabel = document.getElementById('role-label');
@@ -167,7 +106,7 @@
 
         async function init() {
             if (isLoggedIn) {
-                roleLabel.innerText = "編集権限：あり";
+                roleLabel.innerText = "アカウントID: " + userUID;
                 roleLabel.style.color = "#28a745";
             } else {
                 authWarning.style.display = "block";
@@ -180,8 +119,9 @@
 
         async function loadMemo() {
             try {
-                const res = await fetch(API_URL);
-                const data = await res.json();
+                // パラメータとしてUIDを送る
+                const response = await fetch(`${API_URL}?uid=${userUID}`);
+                const data = await response.json();
                 memoArea.value = data.content || "";
                 updateCharCount();
                 syncStat.innerText = "同期済み";
@@ -192,17 +132,18 @@
 
         async function attemptSave() {
             if (!isLoggedIn) return;
-
             syncStat.innerText = "保存中...";
             try {
                 await fetch(API_URL, {
                     method: 'POST',
-                    body: JSON.stringify({ content: memoArea.value })
+                    body: JSON.stringify({ 
+                        uid: userUID,
+                        content: memoArea.value 
+                    })
                 });
                 syncStat.innerText = "保存完了";
             } catch (e) {
                 syncStat.innerText = "保存失敗";
-                alert("データの保存に失敗しました。");
             }
         }
 
@@ -210,12 +151,10 @@
             charCount.innerText = memoArea.value.length + " 文字";
         }
 
-        // 入力監視（ログイン時のみ）
         let timer;
         memoArea.addEventListener('input', () => {
             updateCharCount();
             if (!isLoggedIn) return;
-            
             syncStat.innerText = "編集中...";
             clearTimeout(timer);
             timer = setTimeout(attemptSave, 2000);
